<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="12dp">

        <ImageView
            android:id="@+id/iv_card_imc"
            android:layout_width="384dp"
            android:layout_height="246dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/card_do_resultado_do_imc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_card_imc" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/comfortaa"
            android:text="@string/tc_imc_title"
            android:textColor="@color/black"
            android:textFontWeight="400"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/ic_circle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/iv_card_imc"
            tools:targetApi="p" />

        <ImageView
            android:id="@+id/ic_circle"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:contentDescription="@string/circulo_do_resultado_do_imc"
            app:layout_constraintBottom_toBottomOf="@+id/iv_card_imc"
            app:layout_constraintEnd_toEndOf="@+id/iv_card_imc"
            app:layout_constraintStart_toStartOf="@+id/iv_card_imc"
            app:layout_constraintTop_toTopOf="@+id/iv_card_imc"
            app:layout_constraintVertical_bias="0.84"
            app:srcCompat="@drawable/ic_circle_imc" />

        <TextView
            android:id="@+id/tv_result_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="26dp"
            android:fontFamily="@font/comfortaa"
            android:text="@string/tv_result_imc_number"
            android:textColor="@color/black"
            android:textSize="64sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/ic_circle"
            app:layout_constraintEnd_toEndOf="@+id/ic_circle"
            app:layout_constraintStart_toStartOf="@+id/ic_circle"
            app:layout_constraintTop_toTopOf="@+id/ic_circle" />

        <ImageView
            android:id="@+id/iv_card_table"
            android:layout_width="388dp"
            android:layout_height="410dp"
            android:layout_marginTop="2dp"
            android:contentDescription="@string/card_tabela_de_imc"
            app:layout_constraintEnd_toEndOf="@+id/iv_card_imc"
            app:layout_constraintStart_toStartOf="@+id/iv_card_imc"
            app:layout_constraintTop_toBottomOf="@+id/iv_card_imc"
            app:srcCompat="@drawable/ic_tabela_imc" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>